improve mod decorations