@@ -7,7 +7,7 @@ import java.util.ArrayList;
 import java.util.List;
 
 @Environment(EnvType.CLIENT)
-public class MobDecorationRenderers {
+public class MobDecorations {
     public static final List<MobDecorationRenderer> LIST = new ArrayList<>();
 
     public static void init() {
@@ -17,6 +17,14 @@ public class MobDecorationRenderers {
 
         santaHat("red_santa_hat");
         santaHat("blue_santa_hat");
+
+		scarfAndHat("red_scarf", "red_santa_hat");
+		scarfAndHat("green_scarf", "red_santa_hat");
+		scarfAndHat("blue_scarf", "red_santa_hat");
+
+		scarfAndHat("red_scarf", "blue_santa_hat");
+		scarfAndHat("green_scarf", "blue_santa_hat");
+		scarfAndHat("blue_scarf", "blue_santa_hat");
     }
 
     private static void scarf(String texture) {
@@ -27,11 +35,16 @@ public class MobDecorationRenderers {
         LIST.add(new SantaHatRenderer(texture));
     }
 
-    public static MobDecorationRenderer getRenderer(int index){
+	private static void scarfAndHat(String scarf, String hat) {
+		LIST.add(new HatAndScarfRenderer(scarf, hat));
+	}
+
+    public static MobDecorationRenderer getRenderer(int index) {
         try {
-            return MobDecorationRenderers.LIST.get(index);
-        }catch (IndexOutOfBoundsException e) {
-            return MobDecorationRenderers.LIST.get(MobDecorationRenderers.LIST.size() - 1);
+            return MobDecorations.LIST.get(index);
+        }
+		catch (IndexOutOfBoundsException e) {
+            return MobDecorations.LIST.getLast();
         }
     }
 }
